# ChangeLog for sys-apps/dbus
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/dbus/ChangeLog,v 1.135 2006/10/20 21:03:23 agriffis Exp $

  20 Oct 2006; Aron Griffis <agriffis@gentoo.org> dbus-0.61-r1.ebuild:
  Mark 0.61-r1 stable on alpha

  22 Sep 2006; Doug Goldstein <cardoe@gentoo.org>
  -files/dbus-0.23.2-python_api.patch, -files/dbus-0.23.2-version_fix.patch,
  -files/dbus-0.23-dbus_session_connect.patch,
  -files/dbus-0.23-fd_set.patch, -files/dbus-0.23-pyexecdir.patch,
  -files/dbus-0.23-qt.patch, -files/dbus-dnotify_configure-01.diff,
  -files/dbus-dnotify_watchdirs-01.diff, -files/dbus,
  -dbus-0.23.4-r1.ebuild:
  Removed the old dbus-0.23 series\!

*dbus-0.62-r1 (21 Sep 2006)

  21 Sep 2006; Doug Goldstein <cardoe@gentoo.org> -dbus-0.50-r2.ebuild,
  +dbus-0.62-r1.ebuild:
  Switching to expat from libxml2 since now libxml2 suffers from bitrot
  instead of expat. Removed old version.

  23 Aug 2006; Jeroen Roovers <jer@gentoo.org> dbus-0.61-r1.ebuild:
  Stable for HPPA (bug #137325).

  23 Aug 2006; Steev Klimaszewski <steev@gentoo.org> dbus-0.91.ebuild:
  Block versions less than ourself.  So we can up/downgrade properly.

  21 Aug 2006; Stefan Schweizer <genstef@gentoo.org> dbus-0.91.ebuild:
  qt3 was missing in IUSE, thanks jakub

  20 Aug 2006; Stefan Schweizer <genstef@gentoo.org> dbus-0.91.ebuild:
  depend on old qt3 bindings for backwards compatibility, new apps should
  directly depend on the bindings

*dbus-0.91 (18 Aug 2006)

  18 Aug 2006; Steev Klimaszewski <steev@gentoo.org> +dbus-0.91.ebuild:
  New upstream release, package.masked because there are no qt3 bindings,
  someone needs to either work on them, or incorporate them into the KDE apps
  that use dbus, this MUST stay package.masked until KDE bumps to all using
  QT4, or someone steps up and fixes the qt3 bindings (they need a lot of
  love)

  12 Jul 2006; Aron Griffis <agriffis@gentoo.org> dbus-0.61-r1.ebuild: