@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 30-dbus 243 RMD160 b5e7a813cd5d91f2ea60bb22260e432cbfb72fd9 SHA1 35ee3a5d3db9c7e372603ce916e17a41edd01d36 SHA256 a8e8fec9769cc5d46df8216f7d1e1f9df422c4e46f293fd70d4b017fb01d959d
 MD5 d14e59575f04e55d21a04907b6fd9f3c files/30-dbus 243
 RMD160 b5e7a813cd5d91f2ea60bb22260e432cbfb72fd9 files/30-dbus 243
@@ -65,6 +68,7 @@ SHA256 c1dd746e70ec6e1a0d04ae39308f6341833ae4db2a2d0fc65e156279ff5eb5d4 files/db
 DIST dbus-0.60.tar.gz 1674899 RMD160 035e0de53c2917b6e4b53a43026191d6de39a5f7 SHA1 23de2bd60e5df1c83c0778969faa36f98b93a3b2 SHA256 32ff1b1c7388cd2bfd4a23d4b9f460b2265579f1e097f0d4c0261c7e00adf8a8
 DIST dbus-0.61.tar.gz 1735729 RMD160 67306e1a632c1986460e8ead311ae642447cdcc3 SHA1 fdddc695dad64974fb4138fcb04a77a66f1f47f8 SHA256 45a6b655c0fdfffdabc49857cb19d1ea0c9a8923f76e5c165e01e18ce98da0ec
 DIST dbus-0.62.tar.gz 1737361 RMD160 d653b25726ec96eb324761ebf9efb4a50d1590c0 SHA1 45acea9bd19902791c6dbd8620256caf9d74a667 SHA256 884cc2083add655df57acc7bb144c61e9beeabf08ef76fa86929a58d7bc96707
+DIST dbus-0.94.tar.gz 1372266 RMD160 7e79dfe0d04016b802b72968c2c46d7766f806ed SHA1 8be9629cb950d33da76243d4b7af4ec3d77c152e SHA256 11b259e2cef5a12db59a13cb8f2625f22ff32bbd368bb615fc22c575a00b6ccb
 EBUILD dbus-0.60-r4.ebuild 4624 RMD160 bf4e1bf04a8af18ed6e59ba6b42dfd03460f310a SHA1 7d9ea311320ba561d8a3006fca3d8068f06b68c2 SHA256 3013a95dc43dbf983d6a550f87895a4274f15ab9f6e8f064df40a44f4c78dbcf
 MD5 72538d61dc3152294360353e486994da dbus-0.60-r4.ebuild 4624
 RMD160 bf4e1bf04a8af18ed6e59ba6b42dfd03460f310a dbus-0.60-r4.ebuild 4624
@@ -85,10 +89,14 @@ EBUILD dbus-0.91.ebuild 1155 RMD160 ef0f229135f4b33bd0559c2ba7e5079b6519c254 SHA
 MD5 69ee483e2494027f64173ca0cf4599d9 dbus-0.91.ebuild 1155
 RMD160 ef0f229135f4b33bd0559c2ba7e5079b6519c254 dbus-0.91.ebuild 1155
 SHA256 ba6df9ac1ae059257bec91ac8f00c9f74179fa72600a095e1f03054430507ef7 dbus-0.91.ebuild 1155
-MISC ChangeLog 19924 RMD160 256042371f2534cc1a0f79c416711b151e196a4d SHA1 7d5f297dc2879548442926bf384852002735a68c SHA256 372845a41b732b3723e475ef483eaa26a5a9a74d92e065c11ca57289d279b197
-MD5 177ee0301b417ada09a4abf10346ad08 ChangeLog 19924
-RMD160 256042371f2534cc1a0f79c416711b151e196a4d ChangeLog 19924
-SHA256 372845a41b732b3723e475ef483eaa26a5a9a74d92e065c11ca57289d279b197 ChangeLog 19924
+EBUILD dbus-0.94.ebuild 2785 RMD160 7438be84ce3cc3fa5ed80e58c1b6cc14dabc244b SHA1 ace4ff6bf51a425b78eb03e16c8516ad02cb4ee2 SHA256 329249be86a1ce90f76cfc22c56e4338d6d1cc81f49d41ae50ee3b5f7aff0fb2
+MD5 6e379fee2bde6c0797ee80e5de524f17 dbus-0.94.ebuild 2785
+RMD160 7438be84ce3cc3fa5ed80e58c1b6cc14dabc244b dbus-0.94.ebuild 2785
+SHA256 329249be86a1ce90f76cfc22c56e4338d6d1cc81f49d41ae50ee3b5f7aff0fb2 dbus-0.94.ebuild 2785
+MISC ChangeLog 20055 RMD160 15b057cdedff142373bdb9c35591d6d6be8f648c SHA1 33f40ae36d076ef715b04e75a5affd56d1a08b17 SHA256 30178e66e6435a124f9456a128369b90a2e5eec240a60ad77df7249e6e664f15
+MD5 4e99eb82d3a9ca6ee625f439629d4a2e ChangeLog 20055
+RMD160 15b057cdedff142373bdb9c35591d6d6be8f648c ChangeLog 20055
+SHA256 30178e66e6435a124f9456a128369b90a2e5eec240a60ad77df7249e6e664f15 ChangeLog 20055
 MISC metadata.xml 222 RMD160 cd880923dd3bbe29d863c21fdcc56700006a2bcc SHA1 d2b55bed5d827913edafe6777b37d03c352d9adf SHA256 3b1bdb4611693b7a059584a994f3760dce2f37a048d4c2c55c1756e17519e1cf
 MD5 d854e952b3179d33b2ece377ce9980f3 metadata.xml 222
 RMD160 cd880923dd3bbe29d863c21fdcc56700006a2bcc metadata.xml 222
@@ -105,6 +113,16 @@ SHA256 b249fe2b3ac0467d861e39cc171543bac5f489ec77b22ccf68b9ef09a8c68bbe files/di
 MD5 e00700223b4c2566d3c5b60371b524ff files/digest-dbus-0.62-r1 232
 RMD160 020d50c35dbd8578464f56119db955bfb811d61c files/digest-dbus-0.62-r1 232
 SHA256 b249fe2b3ac0467d861e39cc171543bac5f489ec77b22ccf68b9ef09a8c68bbe files/digest-dbus-0.62-r1 232
-MD5 68b329da9893e34099c7d8ad5cb9c940 files/digest-dbus-0.91 1
-RMD160 c0da025038ed83c687ddc430da9846ecb97f3998 files/digest-dbus-0.91 1
-SHA256 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b files/digest-dbus-0.91 1
+MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-dbus-0.91 0
+RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-dbus-0.91 0
+SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-dbus-0.91 0
+MD5 c3d9ff9a9380935d9061368bcb520a09 files/digest-dbus-0.94 232
+RMD160 d432e31c0c98aca7c1fe44178fcc45c01642c7b6 files/digest-dbus-0.94 232
+SHA256 abb5588b3a444812e46f36cc37ab335cb2c1f86529336221777a27b8c536f626 files/digest-dbus-0.94 232
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.5 (GNU/Linux)
+
+iD4DBQFFRiSUoeSe8B0zEfwRArr6AKCEXhgwxuoYpUq82M+22M/p8iKznwCXdaMt
+DXJeBFd1vDmj1suqc/E+eg==
+=PF+G
+-----END PGP SIGNATURE-----
