@@ -1,0 +1,3 @@
+MD5 85653cafbcfc7edfbad9639459758ed3 dbus-0.94.tar.gz 1372266
+RMD160 7e79dfe0d04016b802b72968c2c46d7766f806ed dbus-0.94.tar.gz 1372266
+SHA256 11b259e2cef5a12db59a13cb8f2625f22ff32bbd368bb615fc22c575a00b6ccb dbus-0.94.tar.gz 1372266
