@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/dbus
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/dbus/ChangeLog,v 1.135 2006/10/20 21:03:23 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/dbus/ChangeLog,v 1.136 2006/10/30 16:13:11 cardoe Exp $
+
+*dbus-0.94 (30 Oct 2006)
+
+  30 Oct 2006; Doug Goldstein <cardoe@gentoo.org> +dbus-0.94.ebuild:
+  Moving dbus-core back over as dbus
 
   20 Oct 2006; Aron Griffis <agriffis@gentoo.org> dbus-0.61-r1.ebuild:
   Mark 0.61-r1 stable on alpha
